# Kanapy

./: .gitattributes  .gitignore  .travis.yml  AUTHORS.md  AUTHORS.rst  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  THIRD-PARTY-LICENSES  admin_setup.py  environment.yml  index.ipynb  postBuild  pyproject.toml  requirements.txt  setup.py  sphere_positions.txt  sphere_weights.txt  test_api.py  workflow_new.py
.github/workflows/: deploy.yml  test_routine.yml
conda.recipe/: meta.yaml
docs/: Makefile  applications.rst  authors.rst  conf.py  generate_rve.html  history.rst  index.html  index.rst  kanapy.rst  kanapy_cli_function_list-aha20210930.ods  make.bat  method.rst  readme.rst  usage.rst  voxels_template_v1.py
docs/_static/: my_theme.css~
docs/builds/doctrees/: applications.doctree  authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  kanapy.doctree  method.doctree  readme.doctree  usage.doctree
docs/builds/html/: .buildinfo  applications.html  authors.html  contributing.html  genindex.html  history.html  index.html  kanapy.html  method.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  usage.html
examples/2-phase-microstructures/: tutorial-api.ipynb  tutorial.ipynb
examples/2-phase_packing/: Material.inp  XY_slice_top_voxels.ang  ms_stats_0.json  ms_stats_1.json  twophase.py  twophase_v2.py
examples/EBSD_analysis/: analyzeAngfile.py  analyzeEBSD.m  analyze_ebsd.m  analyze_ebsd.py  convert_ang2rve.py  ebsd2rve.ipynb  generate_rve.ipynb  workflow_orix.py
examples/EBSD_graph_analysis/: plot_ebsd_graph_manually.py  run_ebsd_analysis_with_graph.py
examples/EBSD_graph_analysis/plot_ebsd_graph_manually_result/: ebsd_graph_summary.txt
examples/ODF_reconstruction/: ebsd_316L.mat  grains_316L.mat  titanium.mat
examples/ODF_reconstruction_with_orientation_assignment/: stat_input.json  titanium_grains.mat
examples/ODF_reconstruction_with_orientation_assignment/json_files/: particle_data.json  shared_surfaceArea.csv
examples/RVE_generation/: Cx_Freeze.py  RVE_generation_GUI.py  create_RVE_flat_grains.py  create_gb_texture.py  create_rve.py  cuboid_grains.py  example_GBtexture.py  generate_GBtexture.py  generate_rve.ipynb  quasi_2D_rve.py  voxels2grains.py  voxels2json.py
examples/data/: rve_ebsd.json
examples/dual_phase_microstructures/: dual_phase.py  dual_phase_voxels.json  porosity.py  porous_voxels.json  read_voxel_files.py  tutorial-api-v1.py  tutorial.ipynb
examples/ellipsoid_packing/: ellipsoid_pack.py  example_rve.py  grainData.txt  stat_input.json  stat_input.txt  test_api.py
examples/ellipsoid_packing/dump_files/: particle.0.dump  particle.1.dump  particle.10.dump  particle.100.dump  particle.101.dump  particle.102.dump  particle.103.dump  particle.104.dump  particle.105.dump  particle.106.dump  (+813 more)
examples/notebooks/: Generate_abq_inp_file.ipynb  demo_voxels.json  dispersed_phase.ipynb  ebsd2rve.ipynb  ebsd2rve_pyiron.ipynb  generate_abq_inp.ipynb  generate_rve.ipynb
examples/polygons/: example_GBtexture.py  generate_rve.ipynb  grains2polygons.py
examples/pyvista/: pyvista-visualization.py  pyvista_visualization.py
examples/sphere_packing/: sphere_pack.py  stat_input.json  stat_input.txt
joss/: paper.bib  paper.md
kanapy/: __init__.py  collision_detect_react.py  entities.py  input_output.py  overlapDetect.cpp  packing.py  voxelization.py
libs/mtex/: startup_mtex.m
libs/mtex-5.5.2/: makeRelease.m
src/kanapy/: ODF_reduction_algo.m  PATHS.json  __init__.py  analyse_micrograph.py  analyze_texture.py  api (original).py  api.py  api_new.py  cli.py  collision_detect_react.py  collisions-alt.py  collisions-hull.py  collisions.py  ebsd_hex_grid.py  entities.py  gb_textureReconstruction.bak20220106  gb_textureReconstruction.m  genMatfile.py  get_ipf_col.m  grains.py  graph_workflow.py  gui.py  import_EBSD-bak.py  import_EBSD.py  init_engine.py  initializations.py  initializations_new.py  input_output (original).py  input_output.py  kanapy-complete.sh  kanapy.py  mdf_Anglefitting_algo_MC.m  odfEst.m  overlapDetect.cpp  packing.py  plotting (original).py  plotting.py  rve_stats.py  smoothingGB.py  splitMean.m  (+7 more)
tests/: __init__.py  ebsd_316L_500x500.ang  shared_surfaceArea.csv  test_GBsmoothing.py  test_collide_detect_react.py  test_collisions.py  test_entities.py  test_graph_operations.py  test_graph_workflow.py  test_input_output.py  test_kanapy.py  test_packing.py  test_plotting.py  test_rve_generation.py  test_texture.py  test_texture2.py  test_voxelization.py  unitTest_ODF_MDF_reconstruction.m
tests/dump_files/: particle.0.dump  particle.1.dump  particle.10.dump  particle.2.dump  particle.3.dump  particle.4.dump  particle.5.dump  particle.6.dump  particle.7.dump  particle.8.dump  particle.9.dump
(+3861 files in other folders)
