[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kanapy"
version = "6.4.3"
description = "Python package for microstructure analyse and generation of microstructure models"
authors = [
    { name = "Alexander Hartmaier", email = "alexander.hartmaier@rub.de" },
]
maintainers = [
    { name = "Mahesh R.G. Prasad" },
    { name = "Abhishek Biswas" },
    { name = "Golsa Tolooei Eshlaghi" },
    { name = "Ronak Shoghi" },
    { name = "Napat Vajragupta" },
    { name = "Yousef Rezek" },
    { name = "Hrushikesh Uday Bhimavarapu" }
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Materials Science",
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "seaborn",
    "click",
    "tqdm",
    "networkx",
    "orix",
    "scikit-image",
    "jsonschema"
]

[project.urls]
Homepage = "https://github.com/ICAMS/Kanapy"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-mock", "pytest-runner", "black", "build", "twine"]

[project.scripts]
kanapy = "kanapy.cli:start"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["kanapy"]

[tool.setuptools.package-data]
# include MTEX library
"kanapy" = ["libs/*"]
