[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kanapy"
version = "6.4.4"
description = "Python package for microstructure analyse and generation of microstructure models"
authors = [
    { name = "Alexander Hartmaier", email = "alexander.hartmaier@rub.de" },
    { name = "Mahesh R.G. Prasad" },
    { name = "Abhishek Biswas" },
    { name = "Golsa Tolooei Eshlaghi" },
    { name = "Ronak Shoghi" },
    { name = "Napat Vajragupta" },
    { name = "Yousef Rezek" },
    { name = "Hrushikesh Uday Bhimavarapu" }
]
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = [ "LICENSE" ]
requires-python = ">=3.9,<3.13"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "seaborn",
    "click",
    "tqdm",
    "pytest-cov",
    "pytest-mock",
    "pytest",
    "networkx",
    "orix",
    "scikit-image",
    "jsonschema"
]

[project.optional-dependencies]
dev = ["pytest-runner", "black", "build", "twine"]

[project.scripts]
kanapy = "kanapy.cli:start"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# include MTEX library
"kanapy" = ["libs/*"]

[project.urls]
Homepage = "https://github.com/ICAMS/Kanapy"

